Rename workflow from .NET to docker deploy

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,8 @@
-name: .NET
+name: docker deploy
 
 on:
    workflow_run:
-    workflows: ["dotnet.yml"]
+    workflows: [".NET"]
     types:
       - completed
 
