--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,10 @@
 name: docker deploy
 
 on:
+   push:
+    branches: [ "main" ]
+   pull_request:
+    branches: [ "main" ]
    workflow_run:
     workflows: [".NET"]
     types:
